trino/trino-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress
  namespace: trino
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - trino.ggg.com.vn
      secretName: trino-tls
  rules:
    - host: "trino.ggg.com.vn"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: trino
                port:
                  number: 8443
